--- a/newtv.html
+++ b/newtv.html
@@ -826,7 +826,7 @@ function onPlayerSelect(type) {
     let intentUrl = `intent://${urlPath}#Intent;package=org.videolan.vlc;S.title=PLAY%20VLC;scheme=${scheme};type=video/mp4;end`;
     window.location.href = intentUrl;
   } else if (type === 'mx') {
-let intentUrl = `intent://${urlPath}#Intent;package=com.mxtech.videoplayer.pro;S.title=PLAY%20MX%20Player%20Pro;scheme=${scheme};type=video/mp4;end`;
+    let intentUrl = `intent://${urlPath}#Intent;package=com.mxtech.videoplayer.pro;S.title=PLAY%20MX%20Player;scheme=${scheme};type=video/mp4;end`;
     window.location.href = intentUrl;
   } else if (type === 'wiseplay') {
     let intentUrl = `intent://${urlPath}#Intent;package=com.wiseplay;S.title=PLAY%20WISEPLAY;scheme=${scheme};type=video/mp4;end`;
